objects/SchoolForce_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>EOY_Purged_Objs__c</fullName>
        <label>EOY Purged Objs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schoolforce Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Present_Daily_Attendance__c</fullName>
        <label>Non-Present Daily Attendance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purged_Setup__c</fullName>
        <label>Purged Setup</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Static_Reference_IDs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to keep the reference IDs on various objects static.</description>
        <label>Static Reference IDs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Triggers_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked this disables all triggers within SchoolForce</description>
        <label>Triggers Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Two_Year_Old_Purged_Objects__c</fullName>
        <label>Two Year Old Purged Objects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mytonomy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Mytonomy in Portal?</label>
        <type>Checkbox</type>
    </fields>
    <label>SchoolForce Settings</label>
</CustomObject>